Updating api