@@ -1,6 +1,7 @@
 package en93.sample.northwindmodulith.webapp.products;
 
 import en93.sample.northwindmodulith.generated.webapp.model.ProductDTO;
+import en93.sample.northwindmodulith.generated.webapp.model.SupplierDTO;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
@@ -17,16 +18,18 @@ public class ProductsService {
     protected List<ProductDTO> getProducts(String productKey, String searchProductName) {
         return productsRepository.findProducts(productKey, searchProductName).stream()
                 .map(entity -> {
-                    //Is there an easier way to map? Externalise to own lib
+
                     final var product = new ProductDTO();
                     product.setProductKey("" + entity.getProductid());
-                    product.setSupplierId(entity.getSupplierid());
+                    SupplierDTO supplier = new SupplierDTO();
+//                    supplier.setSupplierKey();
+                    product.setSupplier(supplier);
                     product.setUnit(entity.getUnit());
                     product.setName(entity.getProductname());
                     product.setCategory(null);//todo
                     product.setPrice(entity.getPrice().floatValue());
                     return product;
                 })
-                .collect(Collectors.toList());
+                .toList();
     }
 }
